fix: tuist 세팅 변경, add: kingfisher 추가, fix: 메인화면 kingfisher 적용

--- a/KakaoInsuranceAssignment.xcworkspace/xcshareddata/xcschemes/KakaoInsuranceAssignment-Project.xcscheme
+++ b/KakaoInsuranceAssignment.xcworkspace/xcshareddata/xcschemes/KakaoInsuranceAssignment-Project.xcscheme
@@ -42,6 +42,20 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
+               BlueprintIdentifier = "B3B395FD6136F57D630138BD"
+               BuildableName = "Kingfisher.framework"
+               BlueprintName = "Kingfisher"
+               ReferencedContainer = "container:Tuist/Dependencies/SwiftPackageManager/.build/checkouts/Kingfisher/Kingfisher.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
                BlueprintIdentifier = "AC884FCED90B962008EBA90A"
                BuildableName = "RxAppState.framework"
                BlueprintName = "RxAppState"
